--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["JacksonGreen1 <<>>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 tweepy = "^4.2.0"
+names = "^0.3.0"
 
 [tool.poetry.dev-dependencies]
 
